azure-migration/kubernetes/networking/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-netpol
  namespace: applicationbib
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: applicationbib
      ports:
        - protocol: TCP
          port: 5432

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9187

  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
